
[1.7.0]

 GH-10: Tracker's constructor is now public.

[1.6.2]

  GH-9: TaskStats.totalTimeString must throw an exception on an empty set of 
        tasks.

[1.6.1]

  GH-7: Initial progress ratio always reported as zero.

  GH-8: Byte formatter fails for TB parsing/ formatting.

[1.6.0]

  GH-6: ByteTask, ByteTracker, ByteRangeTask and ByteRangeTracker removed in
        favor of a customizable unit formatter passed to LongTask/ RangeTask.

[1.5.0]

  GH-5: Dependency upgrades to log4j 2.11.1 and slf4j 1.8.0-beta2.

[1.4.0]

  [release skipped]

[1.3.0]

  GH-4: Dependency upgrades to log4j 2.10.0 and slf4j 1.8.0-beta1.

[1.2.0]

  GH-3: Add support for non-range byte increment task (and ByteTracker formatter)

[1.1.0]

  GH-1: Sort tasks by their start time in stats (breakdowns).

  GH-2: Task implementations call super.start which makes overriding the 
        behavior of start(Tracker) impossible.

[1.0.0]

  Initial open source release.
