@@ -43,4 +43,28 @@ public final class Units {
       return formatUnits(units, UnitFormatters.TIME_UNITS_FULL, true);
     }
   };
+
+  public static int clamp(int value, int min, int max) {
+    if (value < min) return min;
+    if (value > max) return max;
+    return value;
+  }
+
+  public static long clamp(long value, long min, long max) {
+    if (value < min) return min;
+    if (value > max) return max;
+    return value;
+  }
+
+  public static float clamp(float value, float min, float max) {
+    if (value < min) return min;
+    if (value > max) return max;
+    return value;
+  }
+
+  public static double clamp(double value, double min, double max) {
+    if (value < min) return min;
+    if (value > max) return max;
+    return value;
+  }
 }
