@@ -1,13 +1,7 @@
 package com.carrotsearch.progresso.demos;
 
-import java.util.Collections;
-
-import org.junit.After;
-import org.junit.Before;
-
 import com.carrotsearch.progresso.Progress;
 import com.carrotsearch.progresso.views.console.ConsoleAware;
-import com.carrotsearch.progresso.views.console.UpdateableConsoleView;
 import com.carrotsearch.randomizedtesting.RandomizedContext;
 import com.carrotsearch.randomizedtesting.RandomizedTest;
 import com.carrotsearch.randomizedtesting.annotations.ThreadLeakAction;
@@ -15,6 +9,8 @@ import com.carrotsearch.randomizedtesting.annotations.ThreadLeakGroup;
 import com.carrotsearch.randomizedtesting.annotations.ThreadLeakGroup.Group;
 import com.carrotsearch.randomizedtesting.annotations.ThreadLeakScope;
 import com.carrotsearch.randomizedtesting.annotations.ThreadLeakScope.Scope;
+import org.junit.After;
+import org.junit.Before;
 
 @ThreadLeakScope(Scope.TEST)
 @ThreadLeakAction({ThreadLeakAction.Action.WARN})
@@ -34,6 +30,6 @@ public abstract class AbstractExampleTest extends RandomizedTest {
   }
   
   protected Progress defaultProgress() {
-    return new Progress(new UpdateableConsoleView(ConsoleAware.writer(), Collections.emptyList()));
+    return new Progress(ConsoleAware.newConsoleProgressView());
   }  
 }
