@@ -3,6 +3,8 @@
 
  GH-10: Tracker's constructor is now public.
 
+ GH-11: Adaptive time-window based ETA on range tasks.
+
 [1.6.2]
 
   GH-9: TaskStats.totalTimeString must throw an exception on an empty set of 
